--- a/VtuberNoises/app/src/main/AndroidManifest.xml
+++ b/VtuberNoises/app/src/main/AndroidManifest.xml
@@ -5,25 +5,24 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:name="com.yuzumin.guranoises.application.App"
+        android:name=".application.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".CharacterSettings"/>
+        <activity android:name=".AppItemDownloads"></activity>
         <activity android:name=".Sources" />
         <activity android:name=".LegalInfo" />
         <activity android:name=".Reader" />
-        <activity android:name=".SettingsMenu" />
-
-        <activity android:name=".activities.AlarmActivity"/>
+        <activity android:name=".AppMenu" />
+        <activity android:name=".activities.AlarmActivity" />
         <activity
-            android:name=".SoundSettings"
+            android:name=".ClickerSettings"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
@@ -34,9 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activities.RingActivity">
-        </activity>
+        <activity android:name=".activities.RingActivity"></activity>
 
         <receiver android:name=".broadcastreceiver.AlarmBroadcastReceiver">
             <intent-filter>
